--- a/src/App.css
+++ b/src/App.css
@@ -1,111 +1,161 @@
 * {
+  color: #000;
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f5f5f5;
+  background: #f9f9f9;
 }
 
-.App {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  padding: 20px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  width: 100%;
-}
-
-h1 {
-  margin-bottom: 20px;
-  color: #333333;
-}
-
-form {
+.container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 40px;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  background: #f9f9f9;
+}
+
+.form-container,
+.table-container {
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: calc(50% - 20px);
+  max-width: 420px;
+  min-height: 420px;
+  text-align: center;
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 label {
-  margin: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 300px;
-  color: #333333;
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 input {
-  margin-left: 10px;
-  padding: 5px;
-  width: 100px;
-  border: 1px solid #cccccc;
-  border-radius: 5px;
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  color: white;
+  text-align: center;
 }
 
 button {
-  margin-top: 20px;
+  background-color: #4CAF50;
+  color: white;
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: white;
+  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-size: 16px;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
 }
 
 .result {
   margin-top: 20px;
 }
 
-h2 {
-  margin-top: 20px;
-  color: #333333;
+.result h2,
+.result h3 {
+  margin: 5px 0;
 }
 
-h3 {
-  margin-top: 10px;
-  color: #666666;
-}
-
-.imc-table {
-  margin-top: 20px;
+.imc-table h2 {
+  font-size: 20px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 10px;
-  color: #333333;
 }
 
 th,
 td {
-  padding: 10px;
-  border: 1px solid #dddddd;
-  text-align: center;
+  text-align: left;
+  padding: 8px;
 }
 
 th {
   background-color: #f2f2f2;
 }
 
-td {
-  background-color: #ffffff;
+.abaixodopeso {
+  background-color: #dce61a;
 }
 
-.abaixodopeso {
-  background-color: red;
+.abaixodopesoClass,
+.pesoidealClass,
+.sobrepesoClass,
+.obesidade1Class,
+.obesidade2Class,
+.obesidade3Class {
+  background-color: rgba(0, 0, 0, 1);
+  border-radius: 9px;
+  padding: 4px;
+}
+
+.abaixodopesoClass {
+  color: #dce61a;
+}
+
+
+.pesoideal {
+  background-color: #45a049;
+}
+
+.pesoidealClass {
+  color: #45a049;
+}
+
+.sobrepeso {
+  background-color: #fff5e0;
+}
+
+.sobrepesoClass {
+  color: #fff5e0;
+}
+
+.obesidade1 {
+  background-color: #ffe0b2;
+}
+
+.obesidade1Class {
+  color: #ffe0b2;
+}
+
+.obesidade2 {
+  background-color: #ffcc80;
+}
+
+.obesidade2Class {
+  color: #ffcc80;
+}
+
+.obesidade3 {
+  background-color: #f63900;
+
+}
+
+.obesidade3Class {
+  color: #f63900;
 }
