--- a/src/App.css
+++ b/src/App.css
@@ -9,17 +9,20 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: #f9f9f9;
+  background-color: #ccc;
+
 }
 
 .container {
   display: flex;
   justify-content: center;
+
   align-items: center;
   gap: 40px;
   padding: 20px;
   font-family: Arial, sans-serif;
-  background: #f9f9f9;
+  background-color: #ccc;
+
 }
 
 .form-container,
@@ -32,6 +35,8 @@ body {
   min-height: 420px;
   text-align: center;
   max-width: 100%;
+  background: #f9f9f9;
+
 }
 
 .title {
@@ -159,4 +164,62 @@ th {
 
 .obesidade3Class {
   color: #f63900;
+}
+
+@media screen and (max-width: 600px) {
+
+  body {
+    height: 1000px;
+    background-color: #ccc;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 0 20px;
+
+  }
+
+  .form-container,
+  .table-container {
+    width: 100%;
+    max-width: 90%;
+    background: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  input {
+    width: calc(100% - 20px);
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+  }
+
+  button {
+    width: 70%;
+  }
+
+  .result {
+    margin-top: 10px;
+    font-size: 12px;
+  }
+
+  .title,
+  label,
+  button {
+    margin: 5px 0;
+
+  }
+
+  tr,
+  th {
+    font-size: 14px;
+  }
 }
